--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- CSS File -->
     <link rel="stylesheet" href="style.css" />
-    <title>Youtube Clone with HTML & CSS</title>
+    <title>Youtube Clone with HTML & CSS 1</title>
   </head>
   <body>
       <header class="header">
